# deep-learning-journey

./: .gitignore  guide.md  justfile  pyproject.toml
apps/birds-classifier/: pyproject.toml
apps/digit-classifier/: README.md  main.py  predictions.py  pyproject.toml
apps/digit-classifier/models/: classifier.py  data.py  model.ipynb
apps/digit-classifier/routes/: predict.py
apps/digit-classifier/train/: export_sample.py  train.py
apps/fashion-mnist/: main.py  pyproject.toml
apps/fashion-mnist/models/: cnn.py
apps/fashion-mnist/routes/: predict.py
apps/fashion-mnist/train/: train.py
phase0/: main.py  pyproject.toml
phase0/middleware/: errors.py  logging.py
phase0/models/: classifier.py
phase0/routes/: predict.py
