[project]
name = "phase0"
version = "0.1.0"
description = "Pytorch Basics from scratch"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138.1",
    "numpy>=2.5.0",
    "torch",
    "uvicorn>=0.49.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
